--- a/app/src/main/res/layout/activity_step2.xml
+++ b/app/src/main/res/layout/activity_step2.xml
@@ -22,6 +22,7 @@
         app:layoutDescription="@xml/step2" >
 
     <ImageView
+            android:id="@+id/background"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -38,27 +39,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_star_outline"
-            android:tint="?colorOnPrimary"
-            android:contentDescription="@string/star"
-    />
+        android:contentDescription="@string/star"
+        app:tint="?colorOnPrimary" />
 
     <ImageView
             android:id="@+id/right_star"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_star_outline"
-            android:tint="?colorOnPrimary"
-            android:contentDescription="@string/star"
-    />
+        android:contentDescription="@string/star"
+        app:tint="?colorOnPrimary" />
 
     <ImageView
             android:id="@+id/red_star"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_star_outline"
-            android:tint="?colorSecondary"
-            android:contentDescription="@string/star"
-    />
+        android:contentDescription="@string/star"
+        app:tint="?colorSecondary" />
 
     <TextView
             android:id="@+id/credits"
