Modifying a path and Building complex paths

--- a/app/src/main/res/xml/step3.xml
+++ b/app/src/main/res/xml/step3.xml
@@ -27,7 +27,20 @@
                 app:clickAction="toggle"
         />
 
-        <!-- TODO: Add KeyFrameSet and KeyPosition -->
+        <!--  Add KeyFrameSet and KeyPosition -->
+        <!--  A KeyPosition modifies the path a
+        view takes between the start and the end ConstraintSet. -->
+        <!--A KeyPosition can only change the path during the animation,
+        it cannot change the start or the end.-->
+        <KeyFrameSet>
+            <KeyPosition
+                app:framePosition="50"
+                app:motionTarget="@id/moon"
+                app:keyPositionType="parentRelative"
+                app:percentY="0.5"
+                />
+        </KeyFrameSet>
+
     </Transition>
 
     <!-- Constraints to apply at the start of the animation -->
