--- a/app/src/main/res/xml/step5.xml
+++ b/app/src/main/res/xml/step5.xml
@@ -48,10 +48,28 @@
                     app:percentY="0.6"
             />
 
-            <!-- TODO: Add KeyAttributes to rotate and resize @id/moon -->
+            <!--  Add KeyAttributes to rotate and resize @id/moon -->
+            <!-- KeyAttributes modify attributes during motion -->
+            <KeyAttribute
+                app:framePosition="50"
+                app:motionTarget="@id/moon"
+                android:scaleY="2.0"
+                android:scaleX="2.0"
+                android:rotation="-360"
+                />
+            <KeyAttribute
+                app:framePosition="100"
+                app:motionTarget="@id/moon"
+                android:rotation="-720"
+                />
 
+            <!--  Add KeyAttribute to delay the appearance of @id/credits -->
+            <KeyAttribute
+                app:framePosition="85"
+                app:motionTarget="@id/credits"
+                android:alpha="0.0"
+                />
 
-            <!-- TODO: Add KeyAttribute to delay the appearance of @id/credits -->
 
         </KeyFrameSet>
     </Transition>
