Running motion with code

--- a/app/src/main/res/layout/activity_step8.xml
+++ b/app/src/main/res/layout/activity_step8.xml
@@ -13,6 +13,7 @@
   ~   limitations under the License.
   -->
 
+   <!-- AppBarLayout does not resize the MotionLayout.-->
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
